# hostdb

./: .cruft.json  .pre-commit-config.yaml  README.md  pyproject.toml  pyproject.toml.rej  renovate.json5  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: cli-test.yaml  lint.yaml  pages.yaml  publish.yaml  python-package.yaml  python-publish.yaml  test.yaml
examples/: manifest.yaml
examples/ansible/: README.md  ansible.cfg  playbook.yaml
examples/ansible/hostdb-inventory/: inventory.yaml
examples/ansible/inventory_plugins/: hostdb.py
hostdb/: __init__.py  allocate_hostname.py  exceptions.py  hostdb.py  inventory.py  manifest.py  naming.py  terraform.py  validate_hostdb.py  validation.py
hostdb/resources/: wordlist
hostdb/tool/: main.py
hostdb/yaml_loaders/: __init__.py
tests/: __init__.py  conftest.py  test_hostdb.py  test_naming.py  test_validate_hostdb.py  test_validation.py
tests/testdata/: config.yaml
tests/testdata/includes/: hardware_labels.yaml  machines.yaml  manifest.yaml  network.yaml  service_types.yaml
tests/testdata/includes_invalid/: manifest.yaml
tests/testdata/invalid/: invalid_config.yaml
