[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "hostdb"
version = "2.1.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Hostdb manages homelab hosts using infrastructure as code principles."
readme = "README.md"
authors = [{ name = "Allen Porter", email = "allen.porter@gmail.com" }]
requires-python = ">=3.10"
classifiers = []
dependencies = [
  "ansible>=7.1.0",
  "mashumaro[yaml]>=3.11",
]

[project.urls]
Source = "https://github.com/allenporter/hostdb"

[tool.setuptools.packages.find]
include = ["hostdb*"]

[tool.mypy]
exclude = [
  "venv/",
  "examples/",
]
platform = "linux"
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
disable_error_code = [
    "import-untyped",
    # TODO: Fix lint errors and enable these checks
    "attr-defined",
    "return",
    "misc",
    "comparison-overlap",
    "arg-type",
    "return-value",
    "union-attr",
    "valid-type",
    "var-annotated",
]
extra_checks = false
check_untyped_defs = false
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_unreachable = true
# TODO: Fix lint errors and enable these checks
warn_unused_ignores = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
