[metadata]
name = hostdb
version = 1.1.2
description = Hostdb manages homelab hosts using infrastructure as code principles.
long_description = file: README.md
long_description_content_type = text/markdown
prodid = github.com/allenporter/hostdb
url = https://github.com/allenporter/hostdb
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.10
install_requires =
  mashumaro[yaml]>=3.11
  ansible>=7.1.0
include_package_data = True
package_dir =
    = .

[options.entry_points]
console_scripts =
    hostdb = hostdb.tool.main:main

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.package_data]
hostdb =
    resources/wordlist
