[metadata]
name = hostdb
version = 2.0.0
description = Hostdb manages homelab hosts using infrastructure as code principles.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenporter/hostdb
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
prodid = github.com/allenporter/hostdb

[options]
packages = find:
install_requires =
    ansible>=7.1.0
    mashumaro[yaml]>=3.11
python_requires = >=3.10
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    hostdb = hostdb.tool.main:main

[options.package_data]
hostdb =
    py.typed
    resources/wordlist
